--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <link rel = "icon" href =  "https://cdn.discordapp.com/attachments/734499089579901033/759136871133085696/Z.png" type = "image/x-icon"> 
+    <link rel="shortcut icon" type="image/x-icon" href="AgustinianLogo.ico"/> 
 </head>
 
 <body>
