--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="AgustinianLogo.ico"/> 
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/zusmoshijiku/tercerobe/master/AugustinianLogo.ico"/> 
 </head>
 
 <body>
