--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>¡Bienvenido/a a la p&aacute;gina oficial del 3roB!</h1>
     
     <div class="info" id="zoom">
-        <h2>Lista con los links de Zoom:</h2>
+        <h2>Links de Zoom:</h2>
         <table>
             <tr>
                 <td><a href="https://us02web.zoom.us/j/805472207?pwd=aEdsNzlPS1NIMXVvVlE1MGUxUWoyUT09">Lenguaje</a></td>
