--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
         <h2>Links de Zoom:</h2>
         <table>
             <tr>
-                <td><a href="https://us02web.zoom.us/j/805472207?pwd=aEdsNzlPS1NIMXVvVlE1MGUxUWoyUT09">Lenguaje</a></td>
-                <td><a href="https://zoom.us/j/97874328348?pwd=UWh2Ky96Lyt6dlpsSEp6ZzFhUU1zdz09">Matem&aacute;tica</a></td>
-                <td><a href="https://zoom.us/j/95388072837?pwd=VGtjMmVmQVU5WlQ5bmpTVmJuSXNUQT09">Antropolog&iacute;a</a></td>
+                <td><a href="https://us02web.zoom.us/j/805472207?pwd=aEdsNzlPS1NIMXVvVlE1MGUxUWoyUT09" target="_blank">Lenguaje</a></td>
+                <td><a href="https://zoom.us/j/97874328348?pwd=UWh2Ky96Lyt6dlpsSEp6ZzFhUU1zdz09" target="_blank">Matem&aacute;tica</a></td>
+                <td><a href="https://zoom.us/j/95388072837?pwd=VGtjMmVmQVU5WlQ5bmpTVmJuSXNUQT09" target="_blank">Antropolog&iacute;a</a></td>
             </tr>
             <tr></tr>
             <tr>
-                <td><a href="https://zoom.us/j/99574102968?pwd=RktJUHZlTDArUVdqd25ZVWdUMS83QT09">Formaci&oacute;n Ciudadana</a></td>
-                <td><a href="https://us02web.zoom.us/j/2702709332?pwd=WkdMSktodVZpZnNaYzJGdks2a0pTUT09">Consejo de Curso</a></td>
-                <td><a href="https://us04web.zoom.us/j/71831209310?pwd=NU9mcGg4SzlhUFJ1cVRrK1F6RDRvZz09">Historia</a></td>
+                <td><a href="https://zoom.us/j/99574102968?pwd=RktJUHZlTDArUVdqd25ZVWdUMS83QT09" target="_blank">Formaci&oacute;n Ciudadana</a></td>
+                <td><a href="https://us02web.zoom.us/j/2702709332?pwd=WkdMSktodVZpZnNaYzJGdks2a0pTUT09" target="_blank">Consejo de Curso</a></td>
+                <td><a href="https://us04web.zoom.us/j/71831209310?pwd=NU9mcGg4SzlhUFJ1cVRrK1F6RDRvZz09" target="_blank">Historia</a></td>
             </tr>
             <tr></tr>
             <tr>
-                <td><a href="https://us04web.zoom.us/j/78872867869?pwd=ajVwUisyaWhoWjVqUE5na3REMFRwdz09">Ingl&eacute;s</a></td>
-                <td><a href="https://us02web.zoom.us/j/86830419385?pwd=L1lwK2xNUlQycXkra25WdmxWL2pxdz09">Ciencias para la Ciudadan&iacute;a</a></td>
-                <td><a href="https://zoom.us/j/9553866217">Filosof&iacute;a</a></td>
+                <td><a href="https://us04web.zoom.us/j/78872867869?pwd=ajVwUisyaWhoWjVqUE5na3REMFRwdz09" target="_blank">Ingl&eacute;s</a></td>
+                <td><a href="https://us02web.zoom.us/j/86830419385?pwd=L1lwK2xNUlQycXkra25WdmxWL2pxdz09" target="_blank">Ciencias para la Ciudadan&iacute;a</a></td>
+                <td><a href="https://zoom.us/j/9553866217" target="_blank">Filosof&iacute;a</a></td>
             </tr>
         </table>
     </div>
@@ -54,7 +54,7 @@
         <h2>Correo de Curso:</h2>
             <ul>
                 <li>correo3mediob@gmail.com</li>
-                <li>Contrase&ntilde;a: Por motivos de seguridad, la contrase&ntilde;a no est&aacute; disponible ac&aacute;.</li>
+                <li>Contrase&ntilde;a: Por motivos de <strong>seguridad</strong>, la contrase&ntilde;a no est&aacute; disponible ac&aacute;.</li>
             </ul>
     </div>
 
