--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
         <h2>Links de Zoom:</h2>
         <table>
             <tr>
-                <td><a href="https://us02web.zoom.us/j/805472207?pwd=aEdsNzlPS1NIMXVvVlE1MGUxUWoyUT09" target="_blank">Lenguaje</a></td>
-                <td><a href="https://zoom.us/j/97874328348?pwd=UWh2Ky96Lyt6dlpsSEp6ZzFhUU1zdz09" target="_blank">Matem&aacute;tica</a></td>
-                <td><a href="https://zoom.us/j/95388072837?pwd=VGtjMmVmQVU5WlQ5bmpTVmJuSXNUQT09" target="_blank">Antropolog&iacute;a</a></td>
+                <td><a href="https://us02web.zoom.us/j/89874244438" target="_blank">Lenguaje</a></td>
+                <td><a href="https://us02web.zoom.us/j/81448193518?pwd=dTVNS3NrbWZOZFdvc3BUL0F6VUxDUT09" target="_blank">Matem&aacute;tica</a></td>
+                <td><a href="https://zoom.us/j/96449745480?pwd=WmlaZ2drNElmb2VTYVZCV045ZDNCdz09" target="_blank">Antropolog&iacute;a</a></td>
             </tr>
             <tr></tr>
             <tr>
-                <td><a href="https://zoom.us/j/99574102968?pwd=RktJUHZlTDArUVdqd25ZVWdUMS83QT09" target="_blank">Formaci&oacute;n Ciudadana</a></td>
+                <td><a href="https://zoom.us/j/96714982495?pwd=Wk9HaTBNNEVzdHE5U29BcWhTTGJYdz09" target="_blank">Formaci&oacute;n Ciudadana</a></td>
                 <td><a href="https://us02web.zoom.us/j/2702709332?pwd=WkdMSktodVZpZnNaYzJGdks2a0pTUT09" target="_blank">Consejo de Curso</a></td>
-                <td><a href="https://us04web.zoom.us/j/71831209310?pwd=NU9mcGg4SzlhUFJ1cVRrK1F6RDRvZz09" target="_blank">Historia</a></td>
+                <td><a href="https://us02web.zoom.us/j/81617882167?pwd=OFJlMmRGQjlUQ2FiTWNHNFRQdFo5QT09" target="_blank">Historia</a></td>
             </tr>
             <tr></tr>
             <tr>
-                <td><a href="https://us04web.zoom.us/j/78872867869?pwd=ajVwUisyaWhoWjVqUE5na3REMFRwdz09" target="_blank">Ingl&eacute;s</a></td>
-                <td><a href="https://us02web.zoom.us/j/85239986476?pwd=dGc3S2cvTTlEbkhHR2NOMnBYazhFdz09" target="_blank">Ciencias para la Ciudadan&iacute;a</a></td>
-                <td><a href="https://zoom.us/j/9553866217" target="_blank">Filosof&iacute;a</a></td>
+                <td><a href="https://us02web.zoom.us/j/85955699110?pwd=ZGFPVmkrazd4ZUh4a2kweVp6TFNZZz09" target="_blank">Ingl&eacute;s</a></td>
+                <td><a href="https://us02web.zoom.us/j/85431754556?pwd=SEZFVjdSVVBXRStyNWZ2NWpFMVprUT09" target="_blank">Ciencias para la Ciudadan&iacute;a</a></td>
+                <td><a href="https://zoom.us/j/9553866217?pwd=MUU1RW93cXBuTW9MSFpoeHErTExFQT09" target="_blank">Filosof&iacute;a</a></td>
             </tr>
         </table>
     </div>
