--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
 <head>
     <title>
-        Informaci&oacute;n 3roB
+        Informaci&oacute;n 4toB
     </title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <a>Tercero Medio B - Colegio San Agustín</a>
+        <a>Cuarto Medio B - Colegio San Agustín</a>
         <a>|</a>
         <a href="#zoom">Links de Zoom</a>
         <a>|</a>
@@ -25,7 +25,7 @@
     </nav>
 </br>
 
-    <h1>¡Bienvenido/a a la p&aacute;gina oficial del 3roB!</h1>
+    <h1>¡Bienvenido/a a la p&aacute;gina oficial del 4toB!</h1>
     
     <div class="info" id="zoom">
         <h2>Links de Zoom:</h2>
