--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="info" id=horario>
         <h2>Horario:</h2>
-        <img src="https://cdn.discordapp.com/attachments/734499089579901033/759085622865690696/horario.png"/>
+        <img src="https://imgur.com/yGSqbkd"/>
     </div>
     <footer>
         <h4>Volver arriba =>  <a href="#top">ac&aacute;</a></h4>
