--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="info" id=horario>
         <h2>Horario:</h2>
-        <img src="https://imgur.com/yGSqbkd"/>
+        <a href="https://imgur.com/yGSqbkd"><img src="https://i.imgur.com/yGSqbkd.png" title="source: imgur.com" /></a>
     </div>
     <footer>
         <h4>Volver arriba =>  <a href="#top">ac&aacute;</a></h4>
