--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 </br>
 
-    <h1>¡Bienvenido/a a la p&aacute;gina oficial del 4toB!</h1>
+    <h1>¡Bienvenido/a a la p&aacute;gina (casi) oficial del 4toB!</h1>
     
     <div class="info" id="zoom">
         <h2>Links de Zoom:</h2>
